kubernetes/apps/erfbeeld/staging/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: erfbeeld
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    monitoring.webgrip.io/synthetic-check: blackbox-erfbeeld-staging
spec:
  hostnames:
    - erfbeeld-staging.webgrip.dev
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Port
                value: "443"
              - name: X-Forwarded-Proto
                value: https
      backendRefs:
        - name: erfbeeld
          port: 8080
